# coronalyze

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
data/coronagraphs/eac1_aavc_512/: offax_psf_offset_list.fits  sky_trans.fits  stellar_intens_diam_list.fits
docs/: conf.py  index.md  introduction.md
docs/examples/: coronagraphoto_pipeline.ipynb  quickstart.ipynb  snr_methods.ipynb
src/coronablink/: __init__.py  datasets.py
src/coronablink/analysis/: __init__.py
src/coronablink/core/: __init__.py  geometry.py  image_transforms.py  matched_filter.py  modeling.py  pca.py  snr.py  statistics.py
src/coronablink/interfaces/: __init__.py  coronagraphoto.py
src/coronablink/pipelines/: __init__.py  yield_pipeline.py
src/coronalyze/: __init__.py  datasets.py  photometry.py  snr.py
src/coronalyze/analysis/: __init__.py  yields.py
src/coronalyze/core/: __init__.py  geometry.py  image_transforms.py  matched_filter.py  modeling.py  photometry.py  snr.py
src/coronalyze/interfaces/: __init__.py  coronagraphoto.py
src/coronalyze/pipelines/: __init__.py  yield_pipeline.py
tests/: test_gradients.py  test_image_transforms.py  test_interface.py  test_mawet.py  test_pca.py  test_pipelines.py  test_snr_gradients.py  test_snr_physics.py  test_snr_speckle.py  test_validation.py  test_verification.py  test_yields.py
