[build-system]
requires = ['hatchling', "hatch-fancy-pypi-readme", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coronablink"
description = "A JAX-based library for post-processing coronagraphic direct imaging data."
authors = [{ name = "Corey Spohn", email = "corey.a.spohn@nasa.gov" }]
dynamic = ['readme', 'version']
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "equinox",
  "jax",
  "jaxlib",
  "matplotlib>=3.10.8",
  "numpy",
  "pooch",
]
[project.optional-dependencies]
coronagraphoto = ["coronagraphoto"]
dev = ["ruff", "pre-commit"]
docs = [
  "sphinx",
  "myst-nb",
  "sphinx-book-theme",
  "sphinx-autoapi",
  "sphinx_autodoc_typehints",
  "ipython",
]
test = ["nox", "pytest", "hypothesis", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/CoreySpohn/coronablink"
Issues = "https://github.com/CoreySpohn/coronablink/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/coronablink/_version.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[tool.ruff.lint]
select = ["D", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.hatch.build.targets.wheel]
# Only include the src/coronablink package in the wheel
packages = ["src/coronablink"]

[tool.hatch.build.targets.sdist]
# Exclude large data files and development artifacts from sdist
exclude = ["/data", "/scripts", "/docs", "/tests", "/.github"]
